Extended example to add an exports via manifest with 2nd module